--- a/ConcertRewind/Views/Home/Index.cshtml
+++ b/ConcertRewind/Views/Home/Index.cshtml
@@ -1,24 +1,21 @@
-﻿<div class="jumbotron">
-    <h1>ASP.NET</h1>
-    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS, and JavaScript.</p>
-    <p><a href="http://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
+﻿<div>
+    <h1>Concert Rewind</h1>
+    <p>
+        The main concept of our app is if you're going to attend a concert, you can search our app for the songs from the
+        latest concert by that artist.  Then you can establish a playlist on Spotify of those songs so you can listen to them
+        before the concert.  This will allow you to have a great time singing along at the concert.
+    </p>
+
 </div>
-<div class="row">
-    <div class="col-md-4">
-        <h2>Getting started</h2>
-        <p>ASP.NET Web API is a framework that makes it easy to build HTTP services that reach
-        a broad range of clients, including browsers and mobile devices. ASP.NET Web API
-        is an ideal platform for building RESTful applications on the .NET Framework.</p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301870">Learn more &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
-        <h2>Get more libraries</h2>
-        <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301871">Learn more &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
-        <h2>Web Hosting</h2>
-        <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301872">Learn more &raquo;</a></p>
-    </div>
-</div>
+<p>
+    Please enter an artist's name in the search box to get a setlist
+    from their most recent tour.
+</p>
+@*//Form action will point to the GetSetList name in the HomeController.  There will be no URL here in the Form action; in
+    the HomeController, we will point the input name here; and here the form action will point to the Method name in the HomeController
+    that Mike is working on. *@
+<form action="GetSetList" method="get">
+    <input type="text" name="artistName" />
+    <input type="submit" value="Search!" />
+</form>
+
