--- a/ConcertRewind/Content/Site.css
+++ b/ConcertRewind/Content/Site.css
@@ -1,6 +1,18 @@
 ﻿body {
     padding-top: 50px;
     padding-bottom: 20px;
+    background-color: linen;
+}
+
+h1 {
+     font-family: verdana;
+     font-size:  38px;     
+     color: blue;
+}
+p {
+    font-family:  times new roman;
+    font-size:  20px;
+    color: black;
 }
 
 /* Set padding to keep content from hitting the edges */
