--- a/ConcertRewind/Views/Home/Index.cshtml
+++ b/ConcertRewind/Views/Home/Index.cshtml
@@ -10,6 +10,9 @@
 <p>
     Please enter an artist's name in the search box to get a setlist
     from their most recent tour.
+    <a href="https://accounts.spotify.com/authorize?client_id=37dc1ee230b24b90b118ae6042eb4a85&redirect_uri=http://localhost:54295/Home/Index&scope=user-read-private%20user-read-email&response_type=token&state=123
+" target="_blank">Open page in new window</a>
+
 </p>
 @*//Form action will point to the GetSetList name in the HomeController.  There will be no URL here in the Form action; in
     the HomeController, we will point the input name here; and here the form action will point to the Method name in the HomeController
