--- a/ConcertRewind/Views/Home/Index.cshtml
+++ b/ConcertRewind/Views/Home/Index.cshtml
@@ -19,7 +19,7 @@
 @*//Form action will point to the GetSetList name in the HomeController.  There will be no URL here in the Form action; in
     the HomeController, we will point the input name here; and here the form action will point to the Method name in the HomeController
     that Mike is working on. *@
-<form action="GetSetList" method="get">
+<form action="Results" method="get">
     <input type="text" name="artistName" />
     <input type="submit" value="Search!" />
 </form>
