--- a/ConcertRewind/Views/Home/Results.cshtml
+++ b/ConcertRewind/Views/Home/Results.cshtml
@@ -9,6 +9,6 @@
 <h2>@ViewBag.artist</h2>
 <h2>@ViewBag.date</h2>
 <h2>@ViewBag.location</h2>
-<ol>@ViewBag.songsPlayed</ol>
+<ol>@Html.Raw(ViewBag.songsPlayed)</ol>
 
 
