Edits to Home Page

--- a/ConcertRewind/Content/Site.css
+++ b/ConcertRewind/Content/Site.css
@@ -6,8 +6,8 @@
 
 h1 {
      font-family: verdana;
-     font-size:  38px;     
-     color: blue;
+     font-size:  48px;     
+     color: #7108b5;
 }
 p {
     font-family:  times new roman;
