--- a/ConcertRewind/Views/Setlist/Results.cshtml
+++ b/ConcertRewind/Views/Setlist/Results.cshtml
@@ -5,10 +5,6 @@
 
 <h2>Results</h2>
 
-<p>Here are the results of your search of Concert Rewind</p>
-<h2>@ViewBag.artist</h2>
-<h2>@ViewBag.date</h2>
-<h2>@ViewBag.location</h2>
-<ol>@Html.Raw(ViewBag.songsPlayed)</ol>
+<ul>@ViewBag.recentConcerts</ul>
 
 
