--- a/ConcertRewind/Views/Setlist/Results.cshtml
+++ b/ConcertRewind/Views/Setlist/Results.cshtml
@@ -1,10 +1,17 @@
-﻿
+﻿@model IEnumerable<ConcertRewind.Models.concert>
+
 @{
     ViewBag.Title = "Results";
 }
 
 <h2>Results</h2>
 
-<ul>@Html.Raw(ViewBag.recentConcerts)</ul>
+<ul>
+    @foreach (var concert in Model)
+    {
+        string concertInfo = concert.city + ", " + concert.state + ": " + concert.date;
 
-
+        //<li>@concertInfo <a href="Concert?artistName=@concert.artist,concertId=@concert.id">Go to concert</a> </li> // @Html.ActionLink("Go to Concert", "Concert", new { }, new { id = concert.id })</li>
+        <li>@concertInfo @Html.ActionLink("Go to Concert", "Concert", new { artistName = concert.artist, concertId = concert.id })</li>
+    }
+</ul>
