Adding required to search from on Index page.

--- a/ConcertRewind/Views/Home/Index.cshtml
+++ b/ConcertRewind/Views/Home/Index.cshtml
@@ -21,7 +21,7 @@
     the HomeController, we will point the input name here; and here the form action will point to the Method name in the HomeController
     that Mike is working on. -->
 <form action="/Setlist/Results" method="get">
-    <input type="text" name="artistName" />
+    <input type="text" name="artistName" required/>
     <input type="submit" value="Search!" />
 </form>
 <br />
