--- a/ConcertRewind/Views/Setlist/Concert.cshtml
+++ b/ConcertRewind/Views/Setlist/Concert.cshtml
@@ -28,3 +28,11 @@
         <ol>@Html.Raw(ViewBag.songsPlayed)</ol>
     }
 }
+
+@{
+    <!--Only generate YouTube player if relevant videos have been found-->
+    if (ViewBag.videoIds != "")
+    {
+        <iframe width="720" height="405" src="https://www.youtube.com/embed/VIDEO_ID?playlist=@ViewBag.videoIds" frameborder="0" allowfullscreen />
+    }
+}
