--- a/ConcertRewind/Views/Home/test.cshtml
+++ b/ConcertRewind/Views/Home/test.cshtml
@@ -9,6 +9,6 @@
     <iframe width="450"
             height="250"
             frameborder="0" style="border:0"
-            src="https://www.google.com/maps/embed/v1/search?key=AIzaSyDPIzN3oza7qpEWg221HPbq81v0nCnXzMg&q=@location" allowfullscreen></iframe>
+            src="https://www.google.com/maps/embed/v1/search?key=AIzaSyDPIzN3oza7qpEWg221HPbq81v0nCnXzMg&q=@location&maptype=satellite" allowfullscreen></iframe>
 
 }
