added 'most searched' view and additional sql functionality

--- a/ConcertRewind/Views/ConcertDBs/Index.cshtml
+++ b/ConcertRewind/Views/ConcertDBs/Index.cshtml
@@ -1,21 +1,16 @@
 ﻿@model IEnumerable<ConcertRewind.Models.ConcertDB>
 
-@{
-    ViewBag.Title = "Index";
-}
 
-<h2>Index</h2>
+<h2>Most Searched</h2>
 
-<p>
-    @Html.ActionLink("Create New", "Create")
-</p>
+
 <table class="table">
     <tr>
         <th>
-            @Html.DisplayNameFor(model => model.Artist_Name)
+            Artist Name
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.Times_Searched)
+            Number of Times Searched
         </th>
         <th></th>
     </tr>
@@ -23,15 +18,15 @@
 @foreach (var item in Model) {
     <tr>
         <td>
-            @Html.DisplayFor(modelItem => item.Artist_Name)
+            @{
+                
+                string artist = item.Artist_Name;
+                artist = artist.ToUpper();
+                @Html.ActionLink(artist, "Results", "Setlist", new { artistName = artist }, null)
+            }    
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.Times_Searched)
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.ID }) |
-            @Html.ActionLink("Details", "Details", new { id=item.ID }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.ID })
         </td>
     </tr>
 }
