--- a/ConcertRewind/Views/Home/Index.cshtml
+++ b/ConcertRewind/Views/Home/Index.cshtml
@@ -1,4 +1,6 @@
-﻿<div>
+﻿@model IEnumerable<ConcertRewind.Models.ConcertDB>
+
+<div>
     <h1>CONCERT REWIND</h1>
     <p>
         Welcome to Concert Rewind.  With this app, you'll be able to search for an artist and view their most recent concert locations.
