--- a/ConcertRewind/Views/Shared/_Layout.cshtml
+++ b/ConcertRewind/Views/Shared/_Layout.cshtml
@@ -18,6 +18,7 @@
                     <span class="icon-bar"></span>
                 </button>
                 @Html.ActionLink("HOME", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+                @Html.ActionLink("Most Viewed","Index", "ConcertDBs",new { area = "" }, new { @class = "navbar-brand" })
             </div>
             @*<div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
