--- a/ConcertRewind/Content/Site.css
+++ b/ConcertRewind/Content/Site.css
@@ -6,7 +6,8 @@
 
 h1 {
      font-family: verdana;
-     font-size:  48px;     
+     font-size:  48px;  
+     text-align: center;   
      color: #7108b5;
 }
 p {
@@ -14,6 +15,12 @@ p {
     font-size:  20px;
     color: black;
 }
+
+.center {
+    margin: auto;
+    width: 260px;
+    padding: 10px;
+} 
 
 /* Set padding to keep content from hitting the edges */
 .body-content {
