--- a/ConcertRewind/Views/Home/Index.cshtml
+++ b/ConcertRewind/Views/Home/Index.cshtml
@@ -22,10 +22,12 @@
 <!--Form action will point to the GetSetList name in the HomeController.  There will be no URL here in the Form action; in
     the HomeController, we will point the input name here; and here the form action will point to the Method name in the HomeController
     that Mike is working on. -->
-<form action="/Setlist/Results" method="get">
-    <input type="text" name="artistName" required/>
-    <input type="submit" value="Search!" />
-</form>
+<div class="center">
+    <form action="/Setlist/Results" method="get">
+        <input type="text" name="artistName" required />
+        <input type="submit" value="Search!" />
+    </form>
+</div>
 <br />
 <br />
 <div>
