--- a/ConcertRewind/Views/Shared/_Layout.cshtml
+++ b/ConcertRewind/Views/Shared/_Layout.cshtml
@@ -1,5 +1,6 @@
 ﻿<!DOCTYPE html>
 <html>
+
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
@@ -32,7 +33,7 @@
         @RenderBody()
         <hr />
         <footer>
-            <p>App produced by JMC Productions:  Josh Buteyn, Mike Spisich and Chuck Knebl.</p>
+            App produced by JMC Productions:  Josh Buteyn, Mike Spisich and Chuck Knebl.
         </footer>
     </div>
 
