--- a/ConcertRewind/Content/Site.css
+++ b/ConcertRewind/Content/Site.css
@@ -5,13 +5,13 @@
 }
 
 h1 {
-     font-family: verdana;
-     font-size:  48px;  
+     font-family: Tahoma;
+     font-size:  55px;  
      text-align: center;   
      color: #7108b5;
 }
 p {
-    font-family:  times new roman;
+    font-family:  Tacoma;
     font-size:  20px;
     color: black;
 }
