--- a/ConcertRewind/Views/Setlist/Results.cshtml
+++ b/ConcertRewind/Views/Setlist/Results.cshtml
@@ -1,6 +1,5 @@
 ﻿<style type="text/css">
 h1{
-    Color: black;
         font-family: Tahoma;
         text-align: center;
 
@@ -20,12 +19,15 @@ ul{
     margin-left: auto;
     margin-right: auto;
     width: 1000px;
+    
 }
 .test{
 
     display: inline-block;
     margin-left: auto;
     margin-right: auto;
+    border-radius:7px;
+    overflow:hidden;
 
 }
 
