--- a/ConcertRewind/Content/Site.css
+++ b/ConcertRewind/Content/Site.css
@@ -9,6 +9,8 @@ h1 {
      font-size:  55px;  
      text-align: center;   
      color: #7108b5;
+     border-radius: 7px;
+     background-color: white;
 }
 p {
     font-family:  Tacoma;
