--- a/ConcertRewind/Views/Home/Index.cshtml
+++ b/ConcertRewind/Views/Home/Index.cshtml
@@ -47,7 +47,7 @@ input[type=text]:focus {
 <div>
     <h1>CONCERT REWIND</h1>
     <p>
-        Your one stop to preparing and reliving concerts from all your favorite artists. 
+        Your one stop for preparing for and reliving concerts from all your favorite artists. 
     </p>
     <br />
     <div id="images"> 
